--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>STILL</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-      <header>
-        <h1>STILL</h1>
-        <p class="subtitle">Pause. Notice. Be here.</p>
-      </header>
 
-      <section class="camera">
-        <video id="video" autoplay playsinline></video>
-        <canvas id="canvas" class="hidden"></canvas>
-        <div class="controls">
-          <button id="captureBtn">Hold still</button>
-        </div>
-        <p id="permissionHint" class="hint hidden">If camera access is blocked, allow it and refresh.</p>
-      </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>STILL</title>
+  <link rel="stylesheet" href="styles.css?v=2" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap"
+    rel="stylesheet">
+</head>
 
-      <section class="reflection">
-        <div id="output" aria-live="polite"></div>
-        <div class="actions">
-          <button id="againBtn" class="secondary hidden">Look again</button>
-          <button id="saveBtn" class="secondary hidden">Save this moment</button>
-        </div>
-      </section>
+<body>
+  <main>
+    <header>
+      <h1>STILL</h1>
+      <p class="subtitle">Pause. Notice. Be here.</p>
+    </header>
 
-      <section class="gallery">
-        <h2 class="gallery-title">Saved moments</h2>
-        <div class="controls">
-          <button id="clearBtn" class="secondary">Clear saved moments</button>
-        </div>
-        <div id="gallery" class="grid"></div>
-      </section>
-    </main>
+    <section class="camera">
+      <video id="video" autoplay playsinline></video>
+      <canvas id="canvas" class="hidden"></canvas>
+      <div class="controls">
+        <button id="captureBtn">Hold still</button>
+      </div>
+      <p id="permissionHint" class="hint hidden">If camera access is blocked, allow it and refresh.</p>
+    </section>
 
-    <footer>
-      <small>Made to help you pause.</small>
-    </footer>
+    <section class="reflection">
+      <div id="output" aria-live="polite"></div>
+      <div class="actions">
+        <button id="againBtn" class="secondary hidden">Look again</button>
+        <button id="saveBtn" class="secondary hidden">Save this moment</button>
+      </div>
+    </section>
 
-    <script type="module" src="src/app.js"></script>
-  </body>
+    <section class="gallery">
+      <h2 class="gallery-title">Saved moments</h2>
+      <div class="controls">
+        <button id="clearBtn" class="secondary">Clear saved moments</button>
+      </div>
+      <div id="gallery" class="grid"></div>
+    </section>
+  </main>
+
+  <footer>
+    <small>Made to help you pause.</small>
+  </footer>
+
+  <script type="module" src="src/app.js"></script>
+</body>
+
 </html>
